[package]
name = "packed-queries"
version = "0.1.0"
authors = ["Hao Shi <haoshi@umass.edu>"]
edition = "2018"

[dependencies]
memmap2 = "0.2"
kmeans = "0.2.0"
memchr = "2.3.4"
rayon = "1.5.0"
serde = { version = "1", features = ["derive"] }
json5 = "0.3.0"
itertools = "0.10"
rand = "0.8"
lp-solvers = "0.0.4"